@@ -118,7 +118,7 @@ FCKConfig.ToolbarSets["Default"] = [
 ] ;
 
 FCKConfig.ToolbarSets["Basic"] = [
-	['Bold','Italic','-','OrderedList','UnorderedList','-','Link','Unlink','-','About']
+	['Bold','Italic','-','OrderedList','UnorderedList','-','Link','Unlink','SpellCheck','-','About']
 ] ;
 
 FCKConfig.EnterMode = 'p' ;			// p | div | br
