@@ -1,19 +1,18 @@
 FCKConfig.ToolbarSets["editor-toolbar1"] = [
     ['Source','-','Undo','Redo','-','Link','Unlink','-','Bold','Italic',
     '-','JustifyLeft','JustifyCenter','JustifyRight',
-    '-','OrderedList','UnorderedList','Outdent','Indent','FitWindow','About']
+    '-','OrderedList','UnorderedList','Outdent','Indent','FitWindow','SpellCheck','About']
 ] ;
-
 
 FCKConfig.ToolbarSets["editor-toolbar2"] = [
     ['Source','-','Undo','Redo','-','Link','Unlink','-','Bold','Italic','Underline','StrikeThrough',
     '-','JustifyLeft','JustifyCenter','JustifyRight','JustifyFull',
     '-','OrderedList','UnorderedList','Outdent','Indent'],
-    ['PasteText','PasteWord','-','FontName','FontSize','TextColor','BGColor','-','Rule','-','Image','mediagallery','video','Table','FitWindow','-','About']
+    ['PasteText','PasteWord','-','FontName','FontSize','TextColor','BGColor','-','Rule','-','Image','mediagallery','video','Table','FitWindow','SpellCheck','-','About']
 ] ;
 
 FCKConfig.ToolbarSets["editor-toolbar3"] = [
-    ['Source','Templates','-','Cut','Copy','Paste','PasteText','PasteWord','-',
+    ['Source','Templates','-','Cut','Copy','Paste','PasteText','PasteWord','SpellCheck','-',
     'Find','Replace','-','Undo','Redo','-','RemoveFormat','-','Link','Unlink','-',
     'Image','mediagallery','video','SpecialChar','-','Print','SpellCheck','FitWindow'],
     ['Table','Rule','Bold','Italic','Underline','StrikeThrough','-',
@@ -26,5 +25,5 @@ FCKConfig.ToolbarSets["editor-toolbar4"] = [
     ['Source','-','Undo','Redo','-','Link','Unlink','-','Bold','Italic','Underline','StrikeThrough',
     '-','JustifyLeft','JustifyCenter','JustifyRight','JustifyFull',
     '-','OrderedList','UnorderedList','Outdent','Indent'],
-    ['PasteText','PasteWord','-','FontName','FontSize','TextColor','BGColor','-','Rule','-','video','Table','FitWindow','-','About']
+    ['PasteText','PasteWord','-','FontName','FontSize','TextColor','BGColor','-','Rule','-','video','Table','FitWindow','SpellCheck','-','About']
 ] ;
