@@ -7,6 +7,9 @@
 // +--------------------------------------------------------------------------+
 // | $Id::                                                                   $|
 // +--------------------------------------------------------------------------+
+// | Copyright (C) 2008-2009 by the following authors:                        |
+// |                                                                          |
+// | Mark R. Evans          mark AT glfusion DOT org                          |
 // |                                                                          |
 // | Based on the Geeklog CMS                                                 |
 // | Copyright (C) 2003-2008 by the following authors:                        |
@@ -32,7 +35,7 @@
 
     var undefined;
 
-    window.onload = function() {
+    window.addEvent('load', function() {
         var oFCKeditor1 = new FCKeditor( 'comment_html' ) ;
         if (undefined == window.glfusionEditorBaseUrl) {
             glfusionEditorBaseUrl = geeklogEditorBaseUrl;
@@ -48,7 +51,8 @@
         oFCKeditor1.ToolbarSet = 'editor-toolbar1' ;
         oFCKeditor1.Height = 200 ;
         oFCKeditor1.ReplaceTextarea() ;
-    }
+    });
+
     function change_editmode(obj) {
         if (obj.value == 'html') {
             document.getElementById('text_editor').style.display='none';
